updated api and its tests
